# AI_Contacts_app

./: .gitignore  README.md  compose.dev.yml  compose.local.yml  compose.prod.yml  compose.yml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  stack.example.env
backend/: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 19d1b92d8ff2_add_contact_table_with_createdat.py  4c4ee7e905bc_initial_contact_table.py  a4b83b1ac556_create_initial_contacts_table.py
backend/db/: Contact.py  __init__.py  crud.py  db.py  schema.py
backend/src/: __init__.py  main.py
backend/src/api/: chat.py  contacts.py  responses.py
backend/src/config/: config.py  tools.py
backend/src/db/: Contact.py  db.py  schemas.py
backend/src/db/models/: Contact.py
backend/src/mcp/prompts/: chat.py  contact.py
backend/src/mcp/tools/: contact.py  schema.py
backend/src/model/: gemini.py  mcp_server.py
backend/src/services/: chat_service.py  contact_service.py  mpc_client.py
backend/src/utils/: phone.py
conf/: Caddyfile
db/: .env.example
frontend/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
redis/: conf.conf
swe-requests/: 01-health-check.bru  02-create-contact.bru  03-create-contact-duplicate.bru  04-get-all-contacts.bru  05-get-contacts-paginated.bru  README.md  (+11 more)
(+91 files in other folders)
