[project]
name = "backend"
version = "0.1.0"
description = "AI Contacts API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.11.3",
    "google-genai>=1.29.0",
    "phonenumbers>=9.0.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
